# CTF

./: .envrc  .gitignore  Makefile  a.ipynb  ctf.code-workspace  flake.nix  requirements.txt  services.md  shell.nix
Ghidra/: .gitignore
common/: .gitignore  Makefile  all.mk  shellcode.md
common/override/: lib.c
common/remote-run/: client.py  daemon.py  packets.py  protocol.py
common/syoch_ctf/: __init__.py  alphabetic_words.py  it.py  reform_bits.py  require_file.py
defcon2025/0.basic/: basic.py  basic.sh
defcon2025/1.memorybank/: gctest-2.js  gctest.js  solve.py  solve.sh  solve2.sh
defcon2025/10.tetrx/: .gitignore  note.md
defcon2025/5.tenspades/: solve.py
ierae2025/1.warmdown/: remote.sh  solver.py
ierae2025/2.rotrotrot/: Makefile  decompiled.c
ierae2025/rotrotrot/: Makefile  solve.c
ierae2025/warmdown/: solver.py
pico/: .gitignore
pico/!clouds/: flag  solve.py
pico/Echo_Valley/: solve.py
pico/GuessMyCheesePt1/: main.py
pico/WavesOverLambda/: main.py
pico/XtraORdinary/: encrypt.py  test.py
pico/cheese/: !solve.py
pico/corrupt-key-1/: .gitignore  flag  generate-keyconf.py
pico/corrupt-key-2/: generate-keyconf.py  private.key  solve2.sage
pico/credstuff/: solver.py
pico/easy-as-gdb/: all.mk  brute-dec.cpp  solve.cpp
pico/flag_printer/: a.out  (+2 more)
pkgs/: RsaCtfTool.nix  cuso.nix  flatter.nix  msolve.nix
problems/: cc-be-handy-shellcode.nix  cc-be-overflow-1.nix  cc-re-vault-door-1.nix
utils/: all.mk
utils/peb-inspect/: .clangd  CMakeLists.txt  peb-inspect.txt  toolchain.cmake
utils/peb-inspect/src/: main.cpp  peb.hpp
(+89 files in other folders)
